--- a/src/DevIO.Api/Properties/launchSettings.json
+++ b/src/DevIO.Api/Properties/launchSettings.json
@@ -1,28 +1,31 @@
-﻿{
+{
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:38719",
-      "sslPort": 44357
+      "applicationUrl": "http://localhost:52579/",
+      "sslPort": 44366
     }
   },
   "profiles": {
-    "DevIO.Api": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
+    "IIS Express": {
+      "commandName": "IISExpress",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7175;http://localhost:5175",
+      "launchUrl": "api/fornecedores",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "IIS Express": {
-      "commandName": "IISExpress",
+    "DevIO.Api": {
+      "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "api/fornecedores",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5000;http://localhost:5001",
+      "dotnetRunMessages": true
     }
   }
 }
